--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
     margin: -1px;
 }
 
+table {
+border-spacing:0; /* Removes the cell spacing via CSS */
+border-collapse: collapse;  /* Optional - if you don't want to have double border where cells touch */
+}
   td.chevron {
       width: 20px;
     text-align: center;
@@ -71,7 +75,6 @@
     font-weight: bold;
   }
 tr:nth-child(even) {background: #CCC}
-tr:nth-child(odd) {background: #FFF}
 
 .sk-fading-circle {
   margin: 100px auto;
