--- a/index.html
+++ b/index.html
@@ -2,245 +2,293 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes">
 <html>
-<head profile="http://www.w3.org/2005/10/profile">
-  <link rel="icon"
-    type="image/png"
-    href="http://mollietaylor.com/favicon.png">
-  <title>mapsfor.us</title>
 
-  <!-- Leaflet -->
-  <link rel="stylesheet" href="plugins/leaflet/leaflet.css" />
-  <!--[if lte IE 8]>
+<head profile="http://www.w3.org/2005/10/profile">
+    <link rel="icon" type="image/png" href="http://mollietaylor.com/favicon.png">
+    <title>mapsfor.us</title>
+
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="plugins/leaflet/leaflet.css" />
+    <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
   <![endif]-->
-  <script src="plugins/leaflet/leaflet.js"></script>
+    <script src="plugins/leaflet/leaflet.js"></script>
 
-  <!-- leaflet-providers -->
-  <script src="plugins/leaflet-providers/leaflet-providers.js"></script>
+    <!-- leaflet-providers -->
+    <script src="plugins/leaflet-providers/leaflet-providers.js"></script>
 
-  <!-- Tabletop -->
-  <script src="plugins/tabletop/src/tabletop.js"></script>
+    <!-- Tabletop -->
+    <script src="plugins/tabletop/src/tabletop.js"></script>
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/font-awesome-4.5.0/css/font-awesome.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="plugins/font-awesome-4.5.0/css/font-awesome.min.css">
 
-  <!-- Awesome Markers -->
-  <link rel="stylesheet" type="text/css" href="plugins/awesome-markers/leaflet.awesome-markers.css">
-  <script type="text/javascript" src="plugins/awesome-markers/leaflet.awesome-markers.min.js"></script>
+    <!-- Awesome Markers -->
+    <link rel="stylesheet" type="text/css" href="plugins/awesome-markers/leaflet.awesome-markers.css">
+    <script type="text/javascript" src="plugins/awesome-markers/leaflet.awesome-markers.min.js"></script>
 
-  <!-- Markercluster -->
-  <link rel="stylesheet" href="plugins/Leaflet.markercluster/MarkerCluster.css">
-  <link rel="stylesheet" href="plugins/Leaflet.markercluster/MarkerCluster.Default.css">
-  <script type="text/javascript" src="plugins/Leaflet.markercluster/leaflet.markercluster-src.js"></script>
+    <!-- Markercluster -->
+    <link rel="stylesheet" href="plugins/Leaflet.markercluster/MarkerCluster.css">
+    <link rel="stylesheet" href="plugins/Leaflet.markercluster/MarkerCluster.Default.css">
+    <script type="text/javascript" src="plugins/Leaflet.markercluster/leaflet.markercluster-src.js"></script>
 
-  <style type="text/css">
-    html, body{
-      padding: 0;
-      margin: 0 auto;
-      height: 100%;
-      width: 100%;
-    }
+    <style type="text/css">
+        html,
+        body {
+            padding: 0;
+            margin: 0 auto;
+            height: 100%;
+            width: 100%;
+            font-family: "Hevetica", sans-serif;
+            font-size: 14px;
+        }
 
+        #map {
+            max-width: 600px;
+            height: 50vh;
+        }
 
-    #map {
-      width: 100%;
-      height: 50vh;
-    }
+        #gigs-list {
+            width: 100%;
+            min-height: 40px;
+            margin-top: 15px;
+        }
 
-    #gigs-list {
-      width: 90%;
-      min-height: 40px;
-      margin-top: 5px;
-    }
+        .intro-popup .leaflet-popup-tip-container {
+            width: 0;
+            height: 0;
+        }
 
-    .intro-popup .leaflet-popup-tip-container {
-      width: 0;
-      height: 0;
-    }
-    td {
-    margin: -1px;
-}
+        td {
+            margin: -1px;
+        }
 
-table {
-border-spacing:0; /* Removes the cell spacing via CSS */
-border-collapse: collapse;  /* Optional - if you don't want to have double border where cells touch */
-}
-  td.chevron {
-      width: 20px;
-    text-align: center;
-  }
+        td {
+          padding: 4px;
+        }
 
-  a {
-    text-decoration: none;
-    font-weight: bold;
-  }
-tr:nth-child(even) {background: #CCC}
+        table {
+            border-spacing: 0;
+            /* Removes the cell spacing via CSS */
+            border-collapse: collapse;
+            /* Optional - if you don't want to have double border where cells touch */
+        }
 
-.sk-fading-circle {
-  margin: 100px auto;
-  width: 40px;
-  height: 40px;
-  position: relative;
-}
+        td.chevron {
+            width: 20px;
+            text-align: center;
+        }
 
-.sk-fading-circle .sk-circle {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
+        a {
+            text-decoration: none;
+            font-weight: bold;
+        }
 
-.sk-fading-circle .sk-circle:before {
-  content: '';
-  display: block;
-  margin: 0 auto;
-  width: 15%;
-  height: 15%;
-  background-color: #333;
-  border-radius: 100%;
-  -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-          animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-}
-.sk-fading-circle .sk-circle2 {
-  -webkit-transform: rotate(30deg);
-      -ms-transform: rotate(30deg);
-          transform: rotate(30deg);
-}
-.sk-fading-circle .sk-circle3 {
-  -webkit-transform: rotate(60deg);
-      -ms-transform: rotate(60deg);
-          transform: rotate(60deg);
-}
-.sk-fading-circle .sk-circle4 {
-  -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-.sk-fading-circle .sk-circle5 {
-  -webkit-transform: rotate(120deg);
-      -ms-transform: rotate(120deg);
-          transform: rotate(120deg);
-}
-.sk-fading-circle .sk-circle6 {
-  -webkit-transform: rotate(150deg);
-      -ms-transform: rotate(150deg);
-          transform: rotate(150deg);
-}
-.sk-fading-circle .sk-circle7 {
-  -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
-}
-.sk-fading-circle .sk-circle8 {
-  -webkit-transform: rotate(210deg);
-      -ms-transform: rotate(210deg);
-          transform: rotate(210deg);
-}
-.sk-fading-circle .sk-circle9 {
-  -webkit-transform: rotate(240deg);
-      -ms-transform: rotate(240deg);
-          transform: rotate(240deg);
-}
-.sk-fading-circle .sk-circle10 {
-  -webkit-transform: rotate(270deg);
-      -ms-transform: rotate(270deg);
-          transform: rotate(270deg);
-}
-.sk-fading-circle .sk-circle11 {
-  -webkit-transform: rotate(300deg);
-      -ms-transform: rotate(300deg);
-          transform: rotate(300deg);
-}
-.sk-fading-circle .sk-circle12 {
-  -webkit-transform: rotate(330deg);
-      -ms-transform: rotate(330deg);
-          transform: rotate(330deg);
-}
-.sk-fading-circle .sk-circle2:before {
-  -webkit-animation-delay: -1.1s;
-          animation-delay: -1.1s;
-}
-.sk-fading-circle .sk-circle3:before {
-  -webkit-animation-delay: -1s;
-          animation-delay: -1s;
-}
-.sk-fading-circle .sk-circle4:before {
-  -webkit-animation-delay: -0.9s;
-          animation-delay: -0.9s;
-}
-.sk-fading-circle .sk-circle5:before {
-  -webkit-animation-delay: -0.8s;
-          animation-delay: -0.8s;
-}
-.sk-fading-circle .sk-circle6:before {
-  -webkit-animation-delay: -0.7s;
-          animation-delay: -0.7s;
-}
-.sk-fading-circle .sk-circle7:before {
-  -webkit-animation-delay: -0.6s;
-          animation-delay: -0.6s;
-}
-.sk-fading-circle .sk-circle8:before {
-  -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s;
-}
-.sk-fading-circle .sk-circle9:before {
-  -webkit-animation-delay: -0.4s;
-          animation-delay: -0.4s;
-}
-.sk-fading-circle .sk-circle10:before {
-  -webkit-animation-delay: -0.3s;
-          animation-delay: -0.3s;
-}
-.sk-fading-circle .sk-circle11:before {
-  -webkit-animation-delay: -0.2s;
-          animation-delay: -0.2s;
-}
-.sk-fading-circle .sk-circle12:before {
-  -webkit-animation-delay: -0.1s;
-          animation-delay: -0.1s;
-}
+        tr:nth-child(even) {
+            background: #DDD
+        }
 
-@-webkit-keyframes sk-circleFadeDelay {
-  0%, 39%, 100% { opacity: 0; }
-  40% { opacity: 1; }
-}
+        .sk-fading-circle {
+            margin: 100px auto;
+            width: 40px;
+            height: 40px;
+            position: relative;
+        }
 
-@keyframes sk-circleFadeDelay {
-  0%, 39%, 100% { opacity: 0; }
-  40% { opacity: 1; }
-}
-  </style>
+        .sk-fading-circle .sk-circle {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+
+        .sk-fading-circle .sk-circle:before {
+            content: '';
+            display: block;
+            margin: 0 auto;
+            width: 15%;
+            height: 15%;
+            background-color: #333;
+            border-radius: 100%;
+            -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+            animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+        }
+
+        .sk-fading-circle .sk-circle2 {
+            -webkit-transform: rotate(30deg);
+            -ms-transform: rotate(30deg);
+            transform: rotate(30deg);
+        }
+
+        .sk-fading-circle .sk-circle3 {
+            -webkit-transform: rotate(60deg);
+            -ms-transform: rotate(60deg);
+            transform: rotate(60deg);
+        }
+
+        .sk-fading-circle .sk-circle4 {
+            -webkit-transform: rotate(90deg);
+            -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
+        }
+
+        .sk-fading-circle .sk-circle5 {
+            -webkit-transform: rotate(120deg);
+            -ms-transform: rotate(120deg);
+            transform: rotate(120deg);
+        }
+
+        .sk-fading-circle .sk-circle6 {
+            -webkit-transform: rotate(150deg);
+            -ms-transform: rotate(150deg);
+            transform: rotate(150deg);
+        }
+
+        .sk-fading-circle .sk-circle7 {
+            -webkit-transform: rotate(180deg);
+            -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
+        }
+
+        .sk-fading-circle .sk-circle8 {
+            -webkit-transform: rotate(210deg);
+            -ms-transform: rotate(210deg);
+            transform: rotate(210deg);
+        }
+
+        .sk-fading-circle .sk-circle9 {
+            -webkit-transform: rotate(240deg);
+            -ms-transform: rotate(240deg);
+            transform: rotate(240deg);
+        }
+
+        .sk-fading-circle .sk-circle10 {
+            -webkit-transform: rotate(270deg);
+            -ms-transform: rotate(270deg);
+            transform: rotate(270deg);
+        }
+
+        .sk-fading-circle .sk-circle11 {
+            -webkit-transform: rotate(300deg);
+            -ms-transform: rotate(300deg);
+            transform: rotate(300deg);
+        }
+
+        .sk-fading-circle .sk-circle12 {
+            -webkit-transform: rotate(330deg);
+            -ms-transform: rotate(330deg);
+            transform: rotate(330deg);
+        }
+
+        .sk-fading-circle .sk-circle2:before {
+            -webkit-animation-delay: -1.1s;
+            animation-delay: -1.1s;
+        }
+
+        .sk-fading-circle .sk-circle3:before {
+            -webkit-animation-delay: -1s;
+            animation-delay: -1s;
+        }
+
+        .sk-fading-circle .sk-circle4:before {
+            -webkit-animation-delay: -0.9s;
+            animation-delay: -0.9s;
+        }
+
+        .sk-fading-circle .sk-circle5:before {
+            -webkit-animation-delay: -0.8s;
+            animation-delay: -0.8s;
+        }
+
+        .sk-fading-circle .sk-circle6:before {
+            -webkit-animation-delay: -0.7s;
+            animation-delay: -0.7s;
+        }
+
+        .sk-fading-circle .sk-circle7:before {
+            -webkit-animation-delay: -0.6s;
+            animation-delay: -0.6s;
+        }
+
+        .sk-fading-circle .sk-circle8:before {
+            -webkit-animation-delay: -0.5s;
+            animation-delay: -0.5s;
+        }
+
+        .sk-fading-circle .sk-circle9:before {
+            -webkit-animation-delay: -0.4s;
+            animation-delay: -0.4s;
+        }
+
+        .sk-fading-circle .sk-circle10:before {
+            -webkit-animation-delay: -0.3s;
+            animation-delay: -0.3s;
+        }
+
+        .sk-fading-circle .sk-circle11:before {
+            -webkit-animation-delay: -0.2s;
+            animation-delay: -0.2s;
+        }
+
+        .sk-fading-circle .sk-circle12:before {
+            -webkit-animation-delay: -0.1s;
+            animation-delay: -0.1s;
+        }
+
+        @-webkit-keyframes sk-circleFadeDelay {
+            0%,
+            39%,
+            100% {
+                opacity: 0;
+            }
+            40% {
+                opacity: 1;
+            }
+        }
+
+        @keyframes sk-circleFadeDelay {
+            0%,
+            39%,
+            100% {
+                opacity: 0;
+            }
+            40% {
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
-<body>
-  <center>
-<div id="map"></div>
 
-<div id="gigs-list">
-  <div class="sk-fading-circle">
-    <div class="sk-circle1 sk-circle"></div>
-    <div class="sk-circle2 sk-circle"></div>
-    <div class="sk-circle3 sk-circle"></div>
-    <div class="sk-circle4 sk-circle"></div>
-    <div class="sk-circle5 sk-circle"></div>
-    <div class="sk-circle6 sk-circle"></div>
-    <div class="sk-circle7 sk-circle"></div>
-    <div class="sk-circle8 sk-circle"></div>
-    <div class="sk-circle9 sk-circle"></div>
-    <div class="sk-circle10 sk-circle"></div>
-    <div class="sk-circle11 sk-circle"></div>
-    <div class="sk-circle12 sk-circle"></div>
-  </div>
-</div>
-</center>
-<script type="text/javascript">
-  var map = L.map('map', {
-    attributionControl: false
-  }).setView([33.76,-84.365], 11);
-</script>
-<script type="text/javascript" src="constants.js"></script>
-<script type="text/javascript" src="map.js"></script>
+<body>
+    <center>
+        <div id="map"></div>
+
+        <div id="gigs-list">
+            <div class="sk-fading-circle">
+                <div class="sk-circle1 sk-circle"></div>
+                <div class="sk-circle2 sk-circle"></div>
+                <div class="sk-circle3 sk-circle"></div>
+                <div class="sk-circle4 sk-circle"></div>
+                <div class="sk-circle5 sk-circle"></div>
+                <div class="sk-circle6 sk-circle"></div>
+                <div class="sk-circle7 sk-circle"></div>
+                <div class="sk-circle8 sk-circle"></div>
+                <div class="sk-circle9 sk-circle"></div>
+                <div class="sk-circle10 sk-circle"></div>
+                <div class="sk-circle11 sk-circle"></div>
+                <div class="sk-circle12 sk-circle"></div>
+            </div>
+        </div>
+    </center>
+    <script type="text/javascript">
+        var map = L.map('map', {
+            attributionControl: false
+        }).setView([33.76, -84.365], 11);
+    </script>
+    <script type="text/javascript" src="constants.js"></script>
+    <script type="text/javascript" src="map.js"></script>
 
 </body>
+
 </html>
