drop shadow to icons
This slowed map perfomance considerably… would be better to add this to
the image itself.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
             background: #DDD
         }
 
+        .awesome-marker-icon-lightblue {
+    -webkit-filter: drop-shadow(0px 0px 2px #000);
+    filter:         drop-shadow(0px 0px 2px #000);
+}
+
         .sk-fading-circle {
             margin: 100px auto;
             width: 40px;
