Change floating behavior in gig listings
venue-and-address display improved on mobile.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
         .city-and-venue {
-    
+
         }
         .date-container {
           padding: 5px 15px 2px 15px;
@@ -86,11 +86,10 @@
 
         .gig-details-container {
           padding-left: 2px;
-          float: left;
+          float: none;
           text-align: left;
-          vertical-align: text-bottom;
           line-height: 25px;
-          min-width: 200px;
+
                  }
 
         .year {
